I dunno anymore honestly

--- a/greater_greece/localisation/focus_l_english.yml
+++ b/greater_greece/localisation/focus_l_english.yml
@@ -2285,4 +2285,23 @@
  TREE_FILTER_TOGGLE:0 "§GClick§! to toggle showing of more filters"
 
  GGRE_sack_the_prime_minister:0 "Sack the Prime Minister"
- GGRE_sack_the_prime_minister_desc:0 "This is a test"
+ GGRE_sack_the_prime_minister_desc:0 "For too long has the inefficient and unpopular Prime Minister Metaxas paralyzed Greek politics. Greece can only move forward without him."
+ GGRE_renew_the_monarchy:0 "Renew the Monarchy"
+ GGRE_renew_the_monarchy_desc:0 "King George II has previously proven capable at leading the country during this crisis of government, we should cement his rule."
+ GGRE_plea_parents:0 "Plea to our Parents"
+ GGRE_plea_parents_desc: "We are surrounded by enemies on all sides and require a guarantee of safety. King George II is part of the British Royal Family, we should seek for protection from our parental country."
+ GGRE_plea_brothers: "Plea to our Brothers"
+ GGRE_plea_brothers_desc: "We are surrounded by enemies on all sides and require a guarantee of safety. With the Prussian revolution in Germany, officers who trained with King George II are now in charge. We should reach out to our brother's in arms."
+ GGRE_imperial_legacy:0 "Imperial Legacy"
+ GGRE_imperial_legacy_desc:0 "In order to restore our Imperial Legacy, we must begin by rebuiling a military juggernaut worthy of an empire."
+ GGRE_byzantine_influences:0 "Strengthen our Byzantine Influences"
+ GGRE_byzantine_influences_desc:0 "By strengthening our old Byzantine Influences and restoring the Orthodox Church, we can prepare our nation for the rigors of empire building."
+ GGRE_claim_asia:0 "Claim Asia Minor"
+ GGRE_claim_asia_desc:0 "It would be impossible to restore the Byzantine Empire without control of Constantinople, thus we must reclaim Asia Minor for the empire."
+ GGRE_balkan_reintegration:0 "Reintegrate the Balkans"
+ GGRE_balkan_reintegration_desc:0 "The Balkans were historically the fist of the Eastern Roman Empire, if we wish to restore any semblence of its glory, the Balkans must be reintegrated."
+ GGRE_revenge_crusade:0 "Revenge the 4th Crusade"
+ GGRE_revenge_crusade_desc:0 "The greatest betrayal of Byzantium came not from the Caliphate, but from their own allies in Italy when their crusaders sacked Constantinople. Sacking Rome herself would kindly repay this debt."
+ GGRE_final_crusade:0 "Call the 10th Crusade"
+ GGRE_final_crusade_desc:0 "Byzantine's destiny was to control the Holy Land. By calling a 10th and final Crusade, we can finally achieve that vision and cleanse the last remnants of Ottoman rule."
+ 
