Work over of unaligned
Also a start on fascist route.

--- a/greater_greece/localisation/focus_l_english.yml
+++ b/greater_greece/localisation/focus_l_english.yml
@@ -2304,4 +2304,7 @@
  GGRE_revenge_crusade_desc:0 "The greatest betrayal of Byzantium came not from the Caliphate, but from their own allies in Italy when their crusaders sacked Constantinople. Sacking Rome herself would kindly repay this debt."
  GGRE_final_crusade:0 "Call the 10th Crusade"
  GGRE_final_crusade_desc:0 "Byzantine's destiny was to control the Holy Land. By calling a 10th and final Crusade, we can finally achieve that vision and cleanse the last remnants of Ottoman rule."
+ GGRE_third_hellenic:0 "Third Hellenic Civilization"
+ GGRE_third_hellenic_desc:0 "We must restore the legacy of the Greek People and declare the Third Hellenic Civilization! The militaristic nationalists are the best choice to lead us into this new age."
+ 
  
