--- a/greater_greece/localisation/focus_l_english.yml
+++ b/greater_greece/localisation/focus_l_english.yml
@@ -2306,5 +2306,34 @@
  GGRE_final_crusade_desc:0 "Byzantine's destiny was to control the Holy Land. By calling a 10th and final Crusade, we can finally achieve that vision and cleanse the last remnants of Ottoman rule."
  GGRE_third_hellenic:0 "Third Hellenic Civilization"
  GGRE_third_hellenic_desc:0 "We must restore the legacy of the Greek People and declare the Third Hellenic Civilization! The militaristic nationalists are the best choice to lead us into this new age."
- 
+ GGRE_allegiance_to_the_fuhrer: 0 "Allegiance to the Fuhrer"
+ GGRE_allegiance_to_the_fuhrer_desc:0 "We most follow the ideological leaders of our movement. Through allegiance to the Fuhrer, we will rise above the rest!"
+ GGRE_our_loyal_corner:0 "Our Loyal Corner"
+ GGRE_our_loyal_corner_desc:0 "We are well aware that other fascists watch our lands with hungry eyes. We must prove our worth and prepare ourselves for the next war."
+ GGRE_adopt_german_engineering:0 "Adopt German Engineering"
+ GGRE_adopt_german_engineering_desc:0 "Our designs and processes are horribly obselete, but we could leap years ahead by adopting German engineering in our factories."
+ GGRE_integrate_greeks:0 "Integrate the Greeks"
+ GGRE_integrate_greeks_desc:0 "For the Third Hellenic Civilization to truly flourish, we must reunite all the greek speaking peoples under one banner. Past experience has proven this will be possible only through war."
+ GGRE_embrace_makedonian_heritage:0 "Embrace Makedonian Heritage"
+ GGRE_embrace_makedonian_heritage_desc:0 "In order to realize our ambitions of a Third Hellenic Civilization, we must look to the Second for inspiration. Alexander was the greatest military commander in history and our military must follow his example."
+ GGRE_further_eastern_front:0 "Further the Eastern Front"
+ GGRE_further_eastern_front_desc:0 "While the Germans and Italians are busy elsewhere, we can continue the war in the East on to new lands."
+ GGRE_alexandrian_syncretism:0 "Alexandrian Syncretism"
+ GGRE_alexandrian_syncretism_desc:0 "Alexander understood that in order to forge a large empire, one must accept many types of people. Greek purists since lost that vision, but we will restore that privilege: all may be Greek! Only some are more Greek than others."
+ GGRE_restore_the_constitution:0 "Restore the 1927 Constitution"
+ GGRE_restore_the_constitution_desc:0 "The constitution of 1927 established Greece as a Republic, but since then it has been operated by strongmen. The time has finally come to restore the power of that constitution!"
+ GGRE_establish_republic:0 "Establish the Third Republic"
+ GGRE_establish_republic_desc:0 "We finally have the popular support to clean the last autocrats from our government and truly proclaim the Third Republic of Greece!"
+ GGRE_last_bastion:0 "Last Bastion of the East"
+ GGRE_last_bastion_desc:0 "With the Fascists dismantling any semblence of post Great War democracy and the Communists rising from the East, we must fortify ourself as the last bastion of Democracy in the East."
+ GGRE_patriot_cause:0 "The Patriot's Cause"
+ GGRE_patriot_cause_desc:0 "We must make the survival of Greece the duty of every patriotic member of our rare Republic!"
+ GGRE_for_the_future:0 "For the Future of Our Children"
+ GGRE_for_the_future_desc:0 "We must be prepared to make any sacrifice necessary to preserve our country for the future of our children."
+ GGRE_protect_people:0 "Protection of the Greek Peoples"
+ GGRE_protect_people_desc:0 "Greeks live not just within our borders, but within other countries as well. We must take steps to protect Greeks no matter where they are."
+ GGRE_delian_league:0 "The Delian League"
+ GGRE_delian_league_desc:0 "Long ago the Athenians founded the Delian League to protect Democracy from those who would trample out its light. We must restore that league now to face these new threats to Democracy!"
+ GGRE_all_greek:0 "All can be Greek"
+ GGRE_all_greek_desc:0 "We must abolish these nationalist ideas that only those of "pure" Greek heritage can be Greek. All true patriots of Greece can be Greek!"
  
