--- a/greater_greece/localisation/factions_l_english.yml
+++ b/greater_greece/localisation/factions_l_english.yml
@@ -13,6 +13,7 @@
  daitoa_kyoeiken:0 "Daitoa Kyoeiken"
  italy_empire_faction:0 "Novus Imperium Romanum"
  delian_league:0 "Delian League"
+ alpha_omega:0 "Alpha & Omega Revolution"
  chinese_united_front:0 "Chinese United Front"
  miedzymorze_faction:0 "Międzymorze"
  Allies:0 "Allies"
