--- a/greater_greece/localisation/focus_l_english.yml
+++ b/greater_greece/localisation/focus_l_english.yml
@@ -2306,7 +2306,7 @@
  GGRE_final_crusade_desc:0 "Byzantine's destiny was to control the Holy Land. By calling a 10th and final Crusade, we can finally achieve that vision and cleanse the last remnants of Ottoman rule."
  GGRE_third_hellenic:0 "Third Hellenic Civilization"
  GGRE_third_hellenic_desc:0 "We must restore the legacy of the Greek People and declare the Third Hellenic Civilization! The militaristic nationalists are the best choice to lead us into this new age."
- GGRE_allegiance_to_the_fuhrer: 0 "Allegiance to the Fuhrer"
+ GGRE_allegiance_to_the_fuhrer:0 "Allegiance to the Fuhrer"
  GGRE_allegiance_to_the_fuhrer_desc:0 "We most follow the ideological leaders of our movement. Through allegiance to the Fuhrer, we will rise above the rest!"
  GGRE_our_loyal_corner:0 "Our Loyal Corner"
  GGRE_our_loyal_corner_desc:0 "We are well aware that other fascists watch our lands with hungry eyes. We must prove our worth and prepare ourselves for the next war."
@@ -2336,4 +2336,61 @@
  GGRE_delian_league_desc:0 "Long ago the Athenians founded the Delian League to protect Democracy from those who would trample out its light. We must restore that league now to face these new threats to Democracy!"
  GGRE_all_greek:0 "All can be Greek"
  GGRE_all_greek_desc:0 "We must abolish these nationalist ideas that only those of "pure" Greek heritage can be Greek. All true patriots of Greece can be Greek!"
- 
+ GGRE_hung_parliament:0 "Honor the Hung Parliament"
+ GGRE_hung_parliament_desc:0 "If the smallest party can bring our entire Parliament to a grinding halt, imagine what they could accomplish with the whole country behind them!"
+ GGRE_peoples_revolt:0 "The People's Revolt"
+ GGRE_peoples_revolt_desc:0 "Our Marxist comrades have proven even more capable than expected, The People's Revolt is ready to begin!"
+ GGRE_greater_revolution:0 "Part of the Greater Revolution"
+ GGRE_greater_revolution_desc:0 "The work of Marx is hated across Europe, if we are to carry his revolution to the world, we must set aside our differences with the Soviet Union."
+ GGRE_first_pillar:0 "The First Pillar"
+ GGRE_first_pillar_desc:0 "The First Pillar of the Revolution is the people, they must be strengthened for the cause."
+ GGRE_second_pillar:0 "The Second Pillar"
+ GGRE_second_pillar_desc:0 "The Second Pillar of the Revolution is the economy and industry of the nation, this must be built up to support the cause."
+ GGRE_aegean_red:0 "Turn the Aegean Sea Red"
+ GGRE_aegean_red_desc:0 "Our brothers across the Aegean must be brought to the true light of marxism!"
+ GGRE_black_red:0 "Turn the Black Sea Red"
+ GGRE_black_red_desc:0 "With Turkey now supporting the cause, we must solidify our control over the Black Sea."
+ GGRE_adriatic_red:0 "Turn the Adriatic Sea Red"
+ GGRE_adriatic_red_desc:0 "With Italy staring hungrily across the Adriatic, our shores must be secured under the arms of the revolution."
+ GGRE_original_voice:0 "Original Voice of the People"
+ GGRE_original_voice_desc:0 "We, the first to adopt rule by the voice of the people, are the true leaders of Marxism! We must be prepared to step into those shoes."
+ GGRE_third_pillar:0 "The Third Pillar"
+ GGRE_third_pillar_desc:0 "The Final Pillar in our great Marxist revolution is our seperation from the dirty Stalinists, for the first and last revolution!"
+ GGRE_electronics_modernization:0 "Ilektronkia Modernization"
+ GGRE_electronics_modernization_desc:0 "In order to bring our country to the cutting edge of industrialization, we must first modernize our aging Ilektronkia."
+ GGRE_tax_reform:0 "Tax Reform"
+ GGRE_tax_reform_desc:0 "The Drachma is too unstable for much corporate investment, stabilizing it will require extensive tax reform."
+ GGRE_highway_investments:0 "Highway Investments"
+ GGRE_highway_investments_desc:0 "The future of our economy rests on the ability for people and businesses to travel across the country."
+ GGRE_modernized_workforce:0 "Workforce Modernizing"
+ GGRE_modernized_workforce_desc:0 "We must modernize the tools that everyday workers use should we ever hope to match the industrial capacities of other western powers."
+ GGRE_abandoned_building:0 "Abandoned Building Redistribution"
+ GGRE_abandoned_building_desc:0 "With a completed registry we can find which buildings are abandoned and sell them to businesses. This, combined with new tools, should kick our military capacities to new heights."
+ GGRE_industry_competition:0 "Private Industry Competition"
+ GGRE_industry_competition_desc:0 "Scores of private industries use custom tools. By creating a competition among them, we can discover and adopt the best for our own purposes."
+ GGRE_military_academies:0 "Military Academies"
+ GGRE_military_academies_desc:0 "By opening Academies for the Military, we can harness our Military budget for furthering education."
+ GGRE_property_reform:0 "Property Reform"
+ GGRE_property_reform_desc:0 "Civilian Industry is paralyzed by confusing, messy, bureaucratic property laws. These must be reformed."
+ GGRE_new_construction:0 "New Construction Methods"
+ GGRE_new_construction_desc:0 "Outdated methods of construction must be replaced to pave the way for rapid industrialization."
+ GGRE_land_registry:0 "Land Registry"
+ GGRE_land_registry_desc:0 "Greece has long been choked by its complete lack of a land regsitry, this must change for any real advancement to occur."
+ GGRE_suburban_investment:0 "Suburban Investment"
+ GGRE_suburban_investment_desc:0 "With a Land Registry now complete, we can support a growing middle class with the creation of a melting pot between urban and rural: suburban."
+ GGRE_home_improvement:0 "Home Improvement Efforts"
+ GGRE_home_improvement_desc:0 "With private homes for our middle class, we can encourage home improvement and let the people build their own neighborhoods."
+ GGRE_research_grants:0 "Research Grants"
+ GGRE_research_grants_desc:0 "With a growing middle class comes growing tax revenues: these can be funneled into our universities and further the education and prosperity of the next generation."
+ GGRE_trade_reform:0 "Trade Reform"
+ GGRE_trade_reform_desc:0 "In the political chaos of the post Great War world, trade has become a minefield. Updating our old policies will allow for a boom in shipping."
+ GGRE_excavation_machines:0 "Excavation Machines"
+ GGRE_excavation_machines_desc:0 "Our mining equipment is terribly out of date, we must rectify this."
+ GGRE_self_sufficiency:0 "Self-Sufficiency"
+ GGRE_self_sufficiency_desc:0 "There is a terrible dirth of oil and rubber in our territory. We must find alternative means to achieve self-sufficiency."
+ GGRE_resource_expeditions:0 "Resource Expeditions"
+ GGRE_resource_expeditions_desc:0 "With a new focus on self-sufficiency and a land registry defining who owns what, we can finally seek new minerals below the earth."
+ GGRE_sea_reclamation:0 "Sea Reclamation"
+ GGRE_sea_reclamation_desc:0 "The Mediterranean has long been our ally, but its changing tides have rendered stretches of land unusable. Following the Dutch example, we may be able to reclaim some of this land, even if only partially."
+ GGRE_invite_students:0 "Invite Students"
+ GGRE_invite_students_desc:0 "With a burgeoning economy and new, funded universities, we are ready to invite students from our closest allies to come and learn in our lands."
