--- a/greater_greece/localisation/focus_l_english.yml
+++ b/greater_greece/localisation/focus_l_english.yml
@@ -2394,3 +2394,57 @@
  GGRE_sea_reclamation_desc:0 "The Mediterranean has long been our ally, but its changing tides have rendered stretches of land unusable. Following the Dutch example, we may be able to reclaim some of this land, even if only partially."
  GGRE_invite_students:0 "Invite Students"
  GGRE_invite_students_desc:0 "With a burgeoning economy and new, funded universities, we are ready to invite students from our closest allies to come and learn in our lands."
+ GGRE_prepare: "Prepare the People for War"
+ GGRE_prepare_desc:0 "As Greeks we have many classical influences to build upon, we must prepare the people for some hard lessons."
+ GGRE_athenian_strategy:0 "The Athenian Strategy"
+ GGRE_athenian_strategy_desc:0 "One such influence is Athens: by adopting the Athenian Strategy, we can revamp our fleet for greater conflict."
+ GGRE_wooden_wall:0 "The Wooden Wall"
+ GGRE_wooden_wall_desc:0 "Forwarded by that first great admiral Themistocles, the Wooden Wall was the belief that powerful ships could protect Greece from outside enemies. With some work, this could hold true today."
+ GGRE_navy_protect:0 "Naval Protective Forces"
+ GGRE_navy_protect_desc:0 "Athens was a center of trade in the Mediterranean, but if we are to fulfill that legacy, we must be prepared to defend our shipping."
+ GGRE_navy_disrupt:0 "Disruptive Trade Supremacy"
+ GGRE_navy_disrupt_desc:0 "Of course, in order to assure our trade supremacy, we'll have to disrupt the trade of others."
+ GGRE_athenian_battleships:0 "Athenian Battleships"
+ GGRE_athenian_battleships_desc:0 "The final destiny of our great Athenian Fleets are with magnificent Battleships patrolling the waves."
+ GGRE_future_war:0 "The Naval War of the Future"
+ GGRE_future_war_desc:0 "Of course, the glory of now cannot cloud our vision of the future: one day, planes will rule the waves."
+ GGRE_spartan_strategy:0 "The Spartan Strategy"
+ GGRE_spartan_strategy_desc:0 "Another such influence is that of Sparta: the Spartan Strategy will prepare our army to defend Greece in its darkest hour."
+ GGRE_twin_general:0 "Twin General Theory"
+ GGRE_twin_general_desc:0 "Spartan custom of using Twin Kings to lead their city may just be applicable to our armies....."
+ GGRE_hold_pass:0 "Hold the Pass"
+ GGRE_hold_pass_desc:0 "Just as our Spartan ancestors held Thermopylae against the Persians, so will our forces hold the mountains against our foes!"
+ GGRE_superior_arms:0 "Superior Arms"
+ GGRE_superior_arms_desc:0 "One of the greatest edge of the Spartans over their foes was their superior weaponry. Our weapons must be cutting edge."
+ GGRE_citizen_army:0 "Citizen Army"
+ GGRE_citizen_army_desc:0 "By making the army one of the most respected careers a citizen can hold, we can restore the old citizen armies of Greece."
+ GGRE_inflexible:0 "Inflexible Defense"
+ GGRE_inflexible_desc:0 "A phalanx is no longer a sound military strategy but the modern application is clearly entrenchment. We must ensure our engineer companies are the best in the world."
+ GGRE_makedonian_strategy:0 "The Makedonian Strategy"
+ GGRE_makedonian_strategy_desc:0 "The Makedonians conquered the known world by reinventing warfare. We must do the same."
+ GGRE_heir_alexander:0 "Heir of Alexander"
+ GGRE_heir_alexander_desc:0 "As Heirs of Alexander, our generals can adopt his aggresive strategies to triumph on the field."
+ GGRE_alexandrian_cavalry:0 "Alexandrian Cavalry"
+ GGRE_alexandrian_cavalry_desc:0 "Alexander revolutionized Greek warfare by embracing cavalry. We must adopt tanks as the modern Alexandrian Cavalry."
+ GGRE_makedonian_principles:0 "Makedonian Principles"
+ GGRE_makedonian_principles_desc:0 "We can expand on the Makedonian principles of mobility by allowing even our infantry to be as mobiles as our tanks!"
+ GGRE_modern_sarissa:0 "A Modern Sarissa"
+ GGRE_modern_sarissa_desc:0 "Of course, Alexander's armies wouldn't have been complete without the terrifying Sarissas used by their infantry. Our infantry must likewise be equipped with the highest quality weapons."
+ GGRE_siege_heritage:0 "Siege Heritage"
+ GGRE_siege_heritage_desc:0 "While many vaguely remember it as an after thought in history, Alexander was one of the first to use siege artillery. With modern artillery of our own, we can sweep aside fortifications as in days of old."
+ GGRE_archimedes_strategy:0 "The Archimedes Strategy"
+ GGRE_archimedes_strategy_desc:0 "Ancient geniuses such as Archimedes understood that to win at warfare, one must sometimes be unconventional. We cannot ignore this truth."
+ GGRE_icarus_wings:0 "Icarus Wings"
+ GGRE_icarus_wings_desc:0 "Icarus flew to close to the sun and burned. We can avoid these mistakes by keeping our planes close and personal to our infantry."
+ GGRE_apollo_chariot:0 "Apollo's Chariot"
+ GGRE_apollo_chariot_desc:0 "Apollo's Chariot rules the sky and with proper investment, our bombers can too."
+ GGRE_poseidon_chariot:0 "Poseidon's Chariot"
+ GGRE_poseidon_chariot_desc:0 "Of course, as chariots were not complete without horses from Poseidon, so our bomber force will not be complete without a proper sea wing."
+ GGRE_zeus:0 "Lightning Bolts of Zeus"
+ GGRE_zeus_desc:0 "The most feared retribution of any God was the Lightning Bolts of Zeus. Our fighters can be our own lightning bolts."
+ GGRE_storms:0 "Mediterranean Storms"
+ GGRE_storms_desc:0 "Zeus was likewise most feared on the stormy Mediterranean. Our fighters must not ignore the ocean."
+ GGRE_hades:0 "Screams of Hades"
+ GGRE_hades_desc:0 "Experimental rockets have proven intriguing, we must harness these new weapons and make our enemies fear the screams of our Hades Rockets!"
+ GGRE_new_genius:0 "A New Genius"
+ GGRE_new_genius_desc:0 "We cannot achieve the greatness of Archimedes without a new genius. However, we have found one among our own people with the spark of ingenuity who can lead us to the ultimate technology and weapon: nuclear."
