--- a/greater_greece/localisation/ideas_l_english.yml
+++ b/greater_greece/localisation/ideas_l_english.yml
@@ -2671,3 +2671,13 @@
  GGRE_first_pillar_desc:0 "The First Pillar of the Revolution is to strengthen the people."
  GGRE_original_voice:0 "Original Voice of the People"
  GGRE_original_voice_desc:0 "As the Original Voice of the People, we are prepared to step into the role as leader of the Revolution."
+ GGRE_resource_expeditions:0 "Resource Expeditions"
+ GGRE_resource_expeditions_desc: "Expanded resource expeditions have increased available natural resources."
+ GGRE_twin_general:0 "Twin General Theory"
+ GGRE_twin_general_desc:0 "A secondary general overlooking defenses greatly increases their capabilities."
+ GGRE_citizen_army:0 "Citizen Army"
+ GGRE_citizen_army_desc:0 "With the Army a respected career, more people are available for service."
+ GGRE_heir_alexander:0 "Heir of Alexander"
+ GGRE_heir_alexander_desc:0 "As Heirs of Alexander, we carry his fighting spirit!"
+ GGRE_nicholas_christofilos:0 "Nicholas Christofilos"
+ GGRE_nicholas_christofilos_desc:0 "The genius of Archimedes is born again in this man."
